Add rear imu to launch
- Append mount location to imu topics namespaces
 - /sensor/imu/front/*
 - /sensor/imu/rear/*
- Rename av_gx5_15.yaml to gx5_15_front.yaml
- Add av_gx5_15_rear.yaml

--- a/av_imu_launch/config/gx5_15_rear.yaml
+++ b/av_imu_launch/config/gx5_15_rear.yaml
@@ -7,7 +7,7 @@
     # ******************************************************************
     # University  of Edinburgh Vehicle IMU Mandatory Settings
     # ******************************************************************
-    port : "/dev/imu-front"
+    port : "/dev/imu-boot"
     baudrate : 230400
 
     # This will cause the node to convert any NED measurements to ENU
@@ -15,7 +15,7 @@
     use_enu_frame : True
 
     # Configure some frame IDs
-    frame_id : 'imu_fsp_r'  # Frame ID of all of the filter messages. Represents the location of the CV7-INS in the tf tree
+    frame_id : 'imu_rear_mount'  # Frame ID of all of the filter messages. Represents the location of the CV7-INS in the tf tree
 
     # Disable the transform from the mount to frame id transform as it will be handled in the launch file
     publish_mount_to_frame_id_transform : False
